--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 services:
-  rasa:
+  rasa-server:
     restart: always
     image: "jpark2111/wb_rasa:latest-SG"
     ports:
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./:/app
     depends_on:
+      - duckling
       - app
   app:
     restart: always
@@ -17,3 +18,9 @@ services:
       SENDGRID_API_KEY: ${SENDGRID_API_KEY}
     ports:
       - 5055:5055
+  duckling:
+    restart: always
+    image: "rasa/duckling:latest"
+    ports:
+      - 8000:8000
+    command: ["duckling-example-exe", "-p", "8000", "--no-access-log", "--no-error-log"]
