--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -1,161 +1,182 @@
 version: "2.0"
 rules:
-- rule: Confirm that the bot is not a human
-  steps:
-  - intent: check_human
-  - action: utter_bot
-- rule: Ask the user to rephrase whenever they send a message with low NLU confidence
-  steps:
-  - intent: nlu_fallback
-  - action: utter_default
-- rule: answer out of scope
-  steps:
-  - intent: out_of_scope
-  - action: utter_out_of_scope
-- rule: say goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
-- rule: help
-  steps:
-  - intent: help
-  - action: utter_help
-- rule: thankyou
-  steps:
-  - intent: thankyou
-  - action: utter_noworries
-- rule: is there a transfer charge
-  steps:
-  - intent: ask_transfer_charge
-  - action: action_show_transfer_charge
-- rule: Show list of known recipients
-  steps:
-  - intent: check_recipients
-  - action: action_show_recipients
-- rule: Show balance (bank account or credit card, based on account_type)
-  steps:
-  - intent: check_balance
-  - action: action_show_balance
-- rule: Activate cc_payment_form when no other form is active
-  condition:
-  - active_loop: null
-  steps:
-  - intent: pay_cc
-  - action: cc_payment_form
-  - active_loop: cc_payment_form
-- rule: Activate transfer_money_form when no other form is active
-  condition:
-  - active_loop: null
-  steps:
-  - intent: transfer_money
-  - action: transfer_money_form
-  - active_loop: transfer_money_form
-- rule: Activate transaction_search_form when no other form is active
-  condition:
-  - active_loop: null
-  steps:
-  - or:
-    - intent: search_transactions
-    - intent: check_earnings
-  - action: transaction_search_form
-  - active_loop: transaction_search_form
-- rule: Submit cc_payment_form while not switched from previous form
-  condition:
-  - active_loop: cc_payment_form
-  - slot_was_set:
-    - previous_form_name: null
-  steps:
-  - action: cc_payment_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_pay_cc
-- rule: Submit transfer_money_form while not switched from previous form
-  condition:
-  - active_loop: transfer_money_form
-  - slot_was_set:
-    - previous_form_name: null
-  steps:
-  - action: transfer_money_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_transfer_money
-- rule: Submit transaction_search_form while not switched from previous form
-  condition:
-  - active_loop: transaction_search_form
-  - slot_was_set:
-    - previous_form_name: null
-  steps:
-  - action: transaction_search_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_transaction_search
-- rule: Activate Form
-  steps:
-  - intent: request_names
-  - action: name_form
-  - active_loop: name_form
-- rule: Submit Form
-  condition:
-  - active_loop: name_form
-  steps:
-  - action: name_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: utter_submit
-  - action: utter_full_name
-- rule: Activate Nickname Form
-  steps:
-  - intent: startSession
-    entities:
-    - userName: jay
-    - userId: 1
-  - action: action_greet
-  - action: nickname_form
-  - active_loop: nickname_form
-- rule: Submit Nickname Form
-  condition:
-  - active_loop: nickname_form
-  steps:
-  - action: nickname_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: utter_nickname
-- rule: Activate Savings Form
-  steps:
-  - intent: start_savings_session
-  - action: utter_start_savings_session
-  - action: utter_savings_session2
-  - action: action_savings_form
-  - active_loop: savings_form
-- rule: Submit Savings Form
-  condition: 
-  - active_loop: savings_form
-  steps:
-  - action: savings_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_savings_goal_amount
-- rule: Activate Financial360 Form
-  steps:
-  - intent: financial360_questions
-  - action: financial360_form
-  - active_loop: financial360_form
-- rule: Submit Financial360 Form
-  condition: 
-  - active_loop: financial360_form
-  steps:
-  - action: financial360_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_financial360
-- rule: greet
-  steps: 
-  - intent: greet
-  - action: action_greet
+  - rule: Confirm that the bot is not a human
+    steps:
+      - intent: check_human
+      - action: utter_bot
+  # - rule: Ask the user to rephrase whenever they send a message with low NLU confidence
+  #   steps:
+  #     - intent: nlu_fallback
+  #     - action: utter_default
+  # - rule: Query Langchain whenever they send a message with low NLU confidence
+  #   steps:
+  #     - intent: nlu_fallback
+  #     - action: action_langchain
+  #     - action: action_follow_langchain
+  - rule: answer out of scope
+    steps:
+      - intent: out_of_scope
+      - action: utter_out_of_scope
+  - rule: say goodbye
+    steps:
+      - intent: goodbye
+      - action: utter_goodbye
+  - rule: help
+    steps:
+      - intent: help
+      - action: utter_help
+  - rule: thankyou
+    steps:
+      - intent: thankyou
+      - action: utter_noworries
+  # - rule: is there a transfer charge
+  #   steps:
+  #     - intent: ask_transfer_charge
+  #     - action: action_show_transfer_charge
+  # - rule: Show list of known recipients
+  #   steps:
+  #     - intent: check_recipients
+  #     - action: action_show_recipients
+  # - rule: Show balance (bank account or credit card, based on account_type)
+  #   steps:
+  #     - intent: check_balance
+  #     - action: action_show_balance
+  # - rule: Activate cc_payment_form when no other form is active
+  #   condition:
+  #     - active_loop: null
+  #   steps:
+  #     - intent: pay_cc
+  #     - action: cc_payment_form
+  #     - active_loop: cc_payment_form
+  # - rule: Activate transfer_money_form when no other form is active
+  #   condition:
+  #     - active_loop: null
+  #   steps:
+  #     - intent: transfer_money
+  #     - action: transfer_money_form
+  #     - active_loop: transfer_money_form
+  # - rule: Activate transaction_search_form when no other form is active
+  #   condition:
+  #     - active_loop: null
+  #   steps:
+  #     - or:
+  #         - intent: search_transactions
+  #         - intent: check_earnings
+  #     - action: transaction_search_form
+  #     - active_loop: transaction_search_form
+  # - rule: Submit cc_payment_form while not switched from previous form
+  #   condition:
+  #     - active_loop: cc_payment_form
+  #     - slot_was_set:
+  #         - previous_form_name: null
+  #   steps:
+  #     - action: cc_payment_form
+  #     - active_loop: null
+  #     - slot_was_set:
+  #         - requested_slot: null
+  #     - action: action_pay_cc
+  # - rule: Submit transfer_money_form while not switched from previous form
+  #   condition:
+  #     - active_loop: transfer_money_form
+  #     - slot_was_set:
+  #         - previous_form_name: null
+  #   steps:
+  #     - action: transfer_money_form
+  #     - active_loop: null
+  #     - slot_was_set:
+  #         - requested_slot: null
+  #     - action: action_transfer_money
+  # - rule: Submit transaction_search_form while not switched from previous form
+  #   condition:
+  #     - active_loop: transaction_search_form
+  #     - slot_was_set:
+  #         - previous_form_name: null
+  #   steps:
+  #     - action: transaction_search_form
+  #     - active_loop: null
+  #     - slot_was_set:
+  #         - requested_slot: null
+  #     - action: action_transaction_search
+  - rule: Activate Form
+    steps:
+      - intent: request_names
+      - action: name_form
+      - active_loop: name_form
+  - rule: Submit Form
+    condition:
+      - active_loop: name_form
+    steps:
+      - action: name_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: utter_submit
+      - action: utter_full_name
+  - rule: Activate Nickname Form
+    steps:
+      - action: action_start_nickname_form
+      - action: nickname_form
+      - active_loop: nickname_form
+  - rule: Submit Nickname Form
+    condition:
+      - active_loop: nickname_form
+    steps:
+      - action: nickname_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: utter_nickname
+  - rule: Activate Savings Form
+    steps:
+      - intent: start_savings_session
+      - action: utter_start_savings_session
+      - action: utter_savings_session2
+      - action: action_savings_form
+      - active_loop: savings_form
+  - rule: Submit Savings Form
+    condition:
+      - active_loop: savings_form
+    steps:
+      - action: savings_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: action_savings_goal_amount
+  - rule: Activate Financial360 Form
+    steps:
+      - intent: financial360_questions
+      - action: financial360_form
+      - active_loop: financial360_form
+  - rule: Submit Financial360 Form
+    condition:
+      - active_loop: financial360_form
+    steps:
+      - action: financial360_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: action_financial360
+  - rule: greet
+    steps:
+      - intent: greet
+      - action: action_greet
+  - rule: Activate lifeInsurance howMuch form
+    steps:
+      - intent: lifeInsurance_purpose_all
+      - action: utter_lifeInsurance_purpose_all
+      - action: lifeInsurance_howMuch_form
+      - active_loop: lifeInsurance_howMuch_form
+  - rule: Submit lifeInsurance howMuch form
+    condition:
+      - active_loop: lifeInsurance_howMuch_form
+    steps:
+      - action: lifeInsurance_howMuch_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: action_lifeInsurance_estimate
+  # - rule: Query Langchain anytime the user has a direct question for your document base
+  #   steps:
+  #     - intent: knowledge_question
+  #     - action: action_langchain
+  #     - action: action_follow_langchain
