--- a/endpoints.yml
+++ b/endpoints.yml
@@ -12,11 +12,9 @@ version: "2.0"
 # https://rasa.com/docs/rasa/core/actions/#custom-actions/
 
 # action_endpoint:
-#  url: "http://localhost:5056/webhook"
-
+#   url: "http://localhost:5056/webhook"
 action_endpoint:
- url: "http://app:5055/webhook"
-
+  url: "http://app:5055/webhook"
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
 # https://rasa.com/docs/rasa/api/tracker-stores/
@@ -35,6 +33,14 @@ action_endpoint:
 #    db: <name of the db within your mongo instance, e.g. rasa>
 #    username: <username used for authentication>
 #    password: <password used for authentication>
+
+tracker_store:
+  type: SQL
+  dialect: "postgresql" # the dialect used to interact with the db
+  url: "dev-yzserver.postgres.database.azure.com" # (optional) host of the sql db, e.g. "localhost"
+  db: "dev-yzdb" # path to your db
+  username: "YoliZoomAdmin@dev-yzserver" # username used for authentication
+  password: "W@OboTR6cAmiKIrLz" # password used for authentication
 
 # Event broker which all conversation events should be streamed to.
 # https://rasa.com/docs/rasa/api/event-brokers/
